syntax = "proto3";

package common.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/bahmN/rocket-factory/shared/pkg/proto/common/v1;commonV1";

message Session {
  string uuid = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  google.protobuf.Timestamp expires_at = 4;
}

message NotificationMethod{
  string provider_name = 1;
  string target = 2;
}
